--- a/src/App.css
+++ b/src/App.css
@@ -7,32 +7,270 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.carousel-head {
+  margin-bottom: 300px;
+}
+@media screen and (max-width: 600px) {
+  .carousel-head {
+    margin-bottom: 260px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.about-container {
+  margin: 10px auto;
+  padding: 1rem;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 100%;
+
+  margin: 0 auto;
+}
+
+.about-title {
+  /* font-family: 'Adamina', cursive; */
+  font-family: 'Poppins', cursive;
+  font-size: 48px;
+  font-weight: 1;
+  margin: 25px;
+}
+
+.about-wrapper {
+  position: relative;
+  width: 100%;
+  margin: 50px 0 45px;
+}
+
+.about-items {
+  margin-bottom: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.about-item {
+  border-radius: 10px;
+  margin: 0 1rem;
+  margin-bottom: 2rem;
+}
+
+.about-item-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+  -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+  filter: drop-shadow(0 10px 20px rgba(50, 120, 255, 0.017));
+  border-radius: 10px;
+
+  text-decoration: none;
+}
+
+.about-item-img-wrap {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.about-item-img {
+  display: block;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 50%;
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  transition: all 0.3s ease;
+}
+
+.about-item-img:hover {
+  border-radius: 10%;
+  transform: scale(1.1);
+}
+
+.about-item-title-wrap {
+  margin: 18px;
+  padding: 8px;
+}
+
+.about-item-title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+}
+
+.about-item-text-wrap {
+  padding: 20px 30px 30px;
+}
+
+.about-item-text {
+  font-family: "Lora", serif;
+  color: #252e48;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 1024px) {
+  .about-items {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+
+.image1 {
+  background-image: url("./assets/images/galleryImages/1.jpg");
+  animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.image2 {
+  background-image: url("./assets/images/headerimages/IMG_6492.jpg");
+  animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.image3 {
+  background-image: url("./assets/images/headerimages/IMG_6358.jpg");
+  animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+}
+
+.header-section {
+  position: relative;
+  
+  background-color: #cccccc;
+  height: 95vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background-attachment: fixed; */
+
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+}
+
+.header-section > h1 {
+  font-family: "Montserrat", sans-serif;
+  color: #fff;
+  letter-spacing: 2px;
+  font-size: 100px;
+  overflow-wrap: break-word;
+  /* margin-top: -150px; */
+  animation: title-fade-in-anim 1s ease-out;
+}
+
+.header-section > p {
+  margin-top: 8px;
+  color: #fff;
+  font-size: 32px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  animation: title-fade-in-anim 1s ease-out;
+}
+
+.btn-wrapper {
+  margin: 4%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  animation: title-fade-in-anim 1s ease-out;
+}
+
+.header-btn-link {
+  text-decoration: none;
+  width: 50%;
+}
+
+.header-button {
+  width: 100%;
+  padding: 8px 20px;
+  border-radius: 2px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  padding: 15px 10px 15px 10px;
+  letter-spacing: 1.5px;
+}
+
+.header-button:hover {
+  box-shadow: rgb(8, 129, 146) 0 1px 30px;
+  background-color: rgb(9, 141, 158);
+  transition-duration: 0.1s;
+  transition: all 0.3s ease-in-out;
+}
+
+/* Fade it animation */
+@keyframes title-fade-in-anim {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  60% {
+    opacity: 0.7;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .header-section > h1 {
+    font-size: 80px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header-section > h1 {
+    text-align: center;
+  }
+
+  .header-section > p {
+    font-size: 30px;
+    text-align: center;
+  }
+
+  span::before {
+    content: "\a";
+    white-space: pre;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .header-section > h1 {
+    font-size: 65px;
+  }
+
+  .header-section > p {
+    font-size: 20px;
+    text-align: center;
+  }
+
+  .header-btn-link {
+    width: 70%;
   }
 }
